chore(web): mhd_guesser

--- a/templates/code_guesser.html
+++ b/templates/code_guesser.html
@@ -11,7 +11,7 @@
 
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="/static/css/code_guesser.css">
-  <link rel="icon" href="/static/images/icon.png" type="image/png">
+  <link rel="icon" href="/static/images/icon.webp">
 
   <!-- FontAwesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -35,7 +35,7 @@
   </div>
 
   <footer>
-    <p>Created by Motolský Ajťáci &copy; 2025</p>
+    <p>Spráskáno ve škole v učebně 4 &copy; 2025 Motolský Ajťáci</p>
   </footer>
 
   <!-- CodeMirror Core & Modes -->
