--- a/templates/coming_soon.html
+++ b/templates/coming_soon.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon...</title>
     <link rel="stylesheet" href="/static/css/coming_soon.css">
-    <link rel="icon" href="/static/images/icon.png" type="image/png">
+    <link rel="icon" href="/static/images/icon.webp">
 </head>
 <body>
     <!-- Container for Content -->
