--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SPŠD - Main Menu</title>
   <link rel="stylesheet" href="/static/css/index.css">
-  <link rel="icon" href="/static/images/icon.png">
+  <link rel="icon" href="/static/images/icon.webp">
 </head>
 <body>
   <!-- Header -->
@@ -19,7 +19,7 @@
   <!-- Main Content -->
   <main class="cover-grid">
     <!-- Cover 1 -->
-    <a class="cover-block" href="/coming_soon" style="--bg-url: url('/static/images/games/mhd_guesser.webp');">
+    <a class="cover-block" href="/mhd_guesser" style="--bg-url: url('/static/images/games/mhd_guesser.webp');">
       <div class="cover-overlay"></div>
       <div class="cover-text">
         <h2>MHD Guesser</h2>
