--- a/templates/maintenance.html
+++ b/templates/maintenance.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maintenance</title>
     <link rel="stylesheet" href="/static/css/maintenance.css">
-    <link rel="icon" href="/static/images/icon.png" type="image/png">
+    <link rel="icon" href="/static/images/icon.webp">
 </head>
 <body>
     <div class="container">
