chore(popup): edit text

--- a/templates/mhd_guesser.html
+++ b/templates/mhd_guesser.html
@@ -41,8 +41,8 @@
   <!-- Popup -->
   <div id="popup" class="popup">
     <div class="popup-content">
-      <h2>Pracujeme na tom!</h2>
-      <p>Tato webová stránka je stále ve vývoji. Děkujeme za vaši trpělivost.</p>
+      <h2>Upozornění</h2>
+      <p>Tato hra je stále v procesu vývoje. Některé funkce nemusí fungovat správně, a obsah se může měnit. Děkujeme za vaši trpělivost!</p>
       <button id="close-popup" class="popup-close-button">Zavřít</button>
     </div>
   </div>
