--- a/static/css/mhd_guesser.css
+++ b/static/css/mhd_guesser.css
@@ -287,8 +287,8 @@ footer {
 ===================================== */
 #question-image {
   display: block;
-  max-width: 80%;
-  max-height: 300px;
+  max-width: 100%;
+  max-height: 400px; /* Increase the max-height to make the image bigger */
   margin: 20px auto;
   border: 2px solid #fff;
   border-radius: 10px;
@@ -431,4 +431,34 @@ footer {
   .correct-result, .incorrect-result {
     font-size: 1rem; /* Reduce font size for result text */
   }
+}
+
+/* =====================================
+   12) FULLSCREEN
+===================================== */
+
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
+.fullscreen-button {
+  position: absolute;
+  bottom: 30px; /* Move the button a bit higher */
+  right: 15px;
+  background: rgba(0, 0, 0, 0.5);
+  border: none;
+  color: #fff; /* Same color as answer button text */
+  padding: 5px 7px; /* Same padding as answer button */
+  cursor: pointer;
+  border-radius: 5px; /* Same border radius as answer button */
+  transition: transform 0.2s; /* Same transition as answer button */
+}
+
+.fullscreen-button i {
+  font-size: 1.5em;
+}
+
+.fullscreen-button:hover {
+  transform: scale(1.1); /* Same hover effect as answer button */
 }
