--- a/templates/mhd_guesser.html
+++ b/templates/mhd_guesser.html
@@ -24,8 +24,13 @@
   <main class="cover-grid">
     <!-- Add your content here -->
     <div id="game-container">
-      <h2>Uhádni kde je vyfocena fotka</h2>
-      <img id="question-image" src="" alt="MHD Image">
+      <h2><i class="fas fa-bus-simple"></i> Uhádni město podle MHD</h2>
+      <div class="image-container">
+        <img id="question-image" src="" alt="MHD Image">
+        <button id="fullscreen-button" class="fullscreen-button" aria-label="Fullscreen">
+          <i class="fas fa-expand"></i>
+        </button>
+      </div>
       <div id="answer-buttons" class="button-container"></div>
       <div id="result"></div>
       <button id="next-button" style="display: none;">Další</button>
