--- a/static/css/mhd_guesser.css
+++ b/static/css/mhd_guesser.css
@@ -234,6 +234,7 @@ footer {
   font-weight: bold;
   color: #fff;
   background: #3333ff;
+  /* background: linear-gradient(90deg, #ff00cc, #3333ff); */
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -242,14 +243,15 @@ footer {
 
 .answer-button:hover {
   background: #ff00cc;
+  /* background: linear-gradient(90deg, #3333ff, #ff00cc); */
   transform: scale(1.1);
 }
 
-/* .button-container {
+.button-container {
   display: flex;
   justify-content: center;
   margin-top: 20px;
-} */
+}
 
 .answer-button {
   margin: 5px;
@@ -270,7 +272,7 @@ footer {
   transition: background 0.3s, transform 0.2s;
 }
 
-#next-button, #try-again-button:hover {
+#next-button:hover, #try-again-button:hover {
   background: linear-gradient(90deg, #357ABD, #4A90E2); /* Keep the original hover background */
   transform: scale(1.1);
 }
