--- a/templates/code_guesser.html
+++ b/templates/code_guesser.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Uhádni Programovací Jazyk</title>
+  <title>Code Guesser</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CodeMirror CSS & Theme -->
