--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SPŠD - Main Menu</title>
+  <title>Motolský Ajťáci</title>
   <link rel="stylesheet" href="/static/css/index.css">
   <link rel="icon" href="/static/images/icon.webp">
 </head>
