feat(mhd_img): add another cities

--- a/templates/mhd_guesser.html
+++ b/templates/mhd_guesser.html
@@ -24,7 +24,7 @@
   <main class="cover-grid">
     <!-- Add your content here -->
     <div id="game-container">
-      <h2><i class="fas fa-bus-simple"></i> Uhádni město podle obrázku</h2>
+      <h2><i class="fas fa-bus-simple"></i> Uhádni město podle MHD</h2>
       <div class="image-container">
         <img id="question-image" src="" alt="MHD Image">
         <button id="fullscreen-button" class="fullscreen-button" aria-label="Fullscreen">
