--- a/templates/index.html
+++ b/templates/index.html
@@ -34,10 +34,10 @@
     </a>
 
     <!-- Cover 3 -->
-    <a class="cover-block" href="/coming_soon" style="--bg-url: url('/static/images/games/coming_soon.webp');">
+    <a class="cover-block" href="/tictactoe" style="--bg-url: url('/static/images/games/tictactoe.webp');">
       <div class="cover-overlay"></div>
       <div class="cover-text">
-        <h2>Již Brzy...</h2>
+          <h2>Piškvorky 15x15</h2>
       </div>
     </a>
   </main>
